<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom" / -->

    <item
        android:id="@+id/action_select_location"
        android:icon="@drawable/ic_action_location_place"
        android:title="@string/action_select_location"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_calendar"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_collections_go_to_today"
        android:title="@string/action_view_calendar" />

    <item
        android:id="@+id/action_PreferenceWithHeaders"
        android:orderInCategory="200"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_preferences" />


    <item
        android:id="@+id/action_update_user"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/action_update_user" />

    <item
        android:id="@+id/action_location_mgmt"
        android:orderInCategory="310"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/action_location_mgmt" />

</menu>
