<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.Dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="top|center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateUserActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/createuserimg"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:src="@drawable/jc_splash"
        android:maxHeight="200px"
        android:maxWidth="200px"
        android:longClickable="false" />

    <TextView
        android:id="@+id/instructions"
        android:text="@string/AMWelcome"
        android:typeface="sans"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/firstname" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/lastname" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/emailaddr"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/emailaddr" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_weight="1" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:paddingTop="10dip">

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AlertButtonCreateAcct"
            android:onClick="sendMessage" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
